<resources>
    <string name="app_name">Anonnetwork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuperar_contrasnea">Recuperar contrasñea</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="registrate_aqui">Registrate aquí</string>
</resources>